# youtube-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: server.py
src/tools/: search.py  transcript.py
src/utils/: youtube_api.py
