[project]
name = "youtube-mcp-server"
version = "0.1.0"
description = "MCP server for searching YouTube videos and fetching transcripts"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "google-api-python-client>=2.0.0",
    "youtube-transcript-api>=1.0.0",
    "python-dotenv>=1.0.0",
]
